--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 @import "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900";
 html {
     height: 100%;
-    overflow: visible;
+    overflow: scroll;
     position: relative;
     width: 100%
 }
@@ -15825,7 +15825,8 @@ footer .media a:hover {
 
 @media(max-width:479px) {
     .about .heading-about h2 {
-        font-size: 70px
+        font-size: 50px;
+        text-align: center;
     }
 }
 
