--- a/services/assets/css/style.css
+++ b/services/assets/css/style.css
@@ -74,7 +74,7 @@ h6 a,
 #dtr-header-global .nav-link,
 .dropdown-menu a,
 dtr-btn {
-    font-family: 'Oxygen', sans-serif;
+    font-family: montserrat, sans-serif;
     font-weight: 700;
 }
 
