--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import "../fonts/rawline/rawline.css";
-@import "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900";
+/* @import "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900"; */
 html {
     height: 100%;
     overflow: auto;
@@ -7751,7 +7751,7 @@ select,
 }
 
 .hero-bg {
-    background-color: #f5f5f5
+    background-color: #f5f5f500
 }
 
 .muted-bg {
@@ -8334,6 +8334,10 @@ span.muted-bg {
 .icon-box .icon-styled.icon-bordered {
     margin-bottom: .5em
 }
+.factiv{
+border-color: #55bce7;
+border-width: 2px;
+}
 
 .icon-box .icon-styled+h2,
 .icon-box .icon-styled+h3,
@@ -8342,6 +8346,30 @@ span.muted-bg {
 }
 .btn{
     border-radius: 50px;
+}
+.hanim{
+    transition: all 300ms ease;
+}
+.hanim:hover{
+    transform: translateY(-20px);
+
+}
+.ovrlyy{
+    bottom: 0px  !important;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.imgg{
+    position: relative;
+}
+
+.icon-box h3 a{
+    color: white;
 }
 
 .icon-box .icon-styled+p.small-text {
@@ -15969,7 +15997,7 @@ footer .media a:hover {
 
 @media(min-width:375px) {
     .section_gradient h3 {
-        font-size: 28px
+        font-size: 20px
     }
 }
 
