--- a/services/assets/css/main.css
+++ b/services/assets/css/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import "../fonts/rawline/rawline.css";
-@import "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900";
+/* @import "https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900"; */
 html {
     height: 100%;
     overflow: auto;
