--- a/css/main.css
+++ b/css/main.css
@@ -8370,6 +8370,7 @@ border-width: 2px;
 .imgg{
     position: relative;
     height: 360px;
+    width: 360px;
     display: flex;
     justify-content: center;
     
@@ -8377,7 +8378,7 @@ border-width: 2px;
 }
 
 .icon-box h3 a{
-    color: #55bce7;
+    color: white;
 }
 
 .icon-box .icon-styled+p.small-text {
@@ -16146,7 +16147,7 @@ a.url.name:hover {
 
 @media(max-width:1299px) and (min-width:767px) {
     .header_logo_center.footer-logo-ds a.logo img {
-        max-height: 40px
+        max-height: 150px
     }
 }
 
